GNOME Bugzilla – Bug 739430
rtspsrc: mikey related memory leaks
Last modified: 2014-10-31 13:57:23 UTC
There's a couple of memory leaks related to the MIKEY secret key.
Created attachment 289700 [details] [review] leak fixes
commit d15ebcbf627dd57eb331da50873850c1175ad9cc Author: Aleix Conchillo Flaqué <aleix@oblong.com> Date: Thu Oct 30 15:37:36 2014 -0700 rtspsrc: mikey related memory leaks https://bugzilla.gnome.org/show_bug.cgi?id=739430